[package]
name = "yongnuo-osc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.6.0"
num-traits = "0.2"
btleplug = { version = "0.4", features = ["serde"] }
clap = "2.34.0"
exitcode = "1.1.2"
